BAEL-5419: Fixed failing tests